adjusting headline size (fix overflow issue)

--- a/src/scss/global/_typography.scss
+++ b/src/scss/global/_typography.scss
@@ -36,7 +36,7 @@ p {
 h1,
 .text-h1 {
   font-size: var(--fz-xxl);
-  font-size: clamp(var(--fz-lg), 5.6vw, var(--fz-xxl));
+  font-size: clamp(var(--fz-lg), 4.6vw, var(--fz-xxl));
   line-height: 1;
 }
 
